--- a/SuspensionManagerWebApp/Views/Shared/_Layout.cshtml
+++ b/SuspensionManagerWebApp/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
    @*  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
