added plausi-checks to input forms

--- a/SuspensionManagerWebApp/Views/SusElementPosting/AddEditSusElement.cshtml
+++ b/SuspensionManagerWebApp/Views/SusElementPosting/AddEditSusElement.cshtml
@@ -17,21 +17,21 @@
 			<input hidden asp-for="UserName" />
 			<div class="row form-group mb-3">
 				<div class="col">
-					<input class="form-control" asp-for="Manufacturer" type="text" placeholder="Manufacturer" />
+					<input class="form-control" asp-for="Manufacturer" type="text" placeholder="Manufacturer" required/>
 				</div>
 				<div class="col">
-					<input class="form-control" asp-for="Model" type="text" placeholder="Model" />
+					<input class="form-control" asp-for="Model" type="text" placeholder="Model" required/>
 				</div>
 				<div class="col">
-					<input class="form-control" asp-for="ModelYear" type="text" placeholder="Modelyear" />
+					<input class="form-control" asp-for="ModelYear" type="text" placeholder="Modelyear" required/>
 				</div>
 			</div>
 			<div class="row form-group mb-3">
 				<div class="col">
-					<input class="form-control" asp-for="Length" type="text" placeholder="Length" />
+					<input class="form-control" asp-for="Length" type="text" placeholder="Length" required/>
 				</div>
 				<div class="col">
-					<input class="form-control" asp-for="Stroke" type="text" placeholder="Stroke" />
+					<input class="form-control" asp-for="Stroke" type="text" placeholder="Stroke" required/>
 				</div>
 			</div>
 			<div class="row form-group mb-3">
