--- a/SuspensionManagerWebApp/Views/SusElementPosting/_AirShockSetting.cshtml
+++ b/SuspensionManagerWebApp/Views/SusElementPosting/_AirShockSetting.cshtml
@@ -15,7 +15,7 @@
             <div class="col-form-label">Air pressure:</div>
         </div>
         <div class="col">
-            <input class="form-control" asp-for="AirPressure" type="text" placeholder="Air pressure" />
+            <input class="form-control" asp-for="AirPressure" type="text" placeholder="Air pressure" required/>
         </div>
     </div>
     <div class="row form-group mb-3">
@@ -23,13 +23,13 @@
             <div class="col-form-label">Negative tokens:</div>
         </div>
         <div class="col">
-            <input class="form-control" asp-for="NNegToken" type="text" placeholder="0" />
+            <input class="form-control" asp-for="NNegToken" type="text" placeholder="0" required/>
         </div>
         <div class="col">
             <div class="col-form-label">Positive tokens:</div>
         </div>
         <div class="col">
-            <input class="form-control" asp-for="NPosToken" type="text" placeholder="0" />
+            <input class="form-control" asp-for="NPosToken" type="text" placeholder="0" required />
         </div>
     </div>
 
@@ -38,7 +38,7 @@
             <div class="col-form-label">High Speed Compression:</div>
         </div>
         <div class="col">
-            <input class="form-control" asp-for="HSC" type="text" placeholder="HSC" />
+            <input class="form-control" asp-for="HSC" type="text" placeholder="HSC" required/>
         </div>
     </div>
     <div class="row form-group mb-3">
@@ -46,7 +46,7 @@
             <div class="col-form-label">Low Speed Compression:</div>
         </div>
         <div class="col">
-            <input class="form-control" asp-for="LSC" type="text" placeholder="LSC" />
+            <input class="form-control" asp-for="LSC" type="text" placeholder="LSC" required/>
         </div>
     </div>
     <div class="row form-group mb-3">
@@ -54,7 +54,7 @@
             <div class="col-form-label">High Speed Rebound:</div>
         </div>
         <div class="col">
-            <input class="form-control" asp-for="HSR" type="text" placeholder="HSR" />
+            <input class="form-control" asp-for="HSR" type="text" placeholder="HSR" required/>
         </div>
     </div>
     <div class="row form-group mb-3">
@@ -62,7 +62,7 @@
             <div class="col-form-label">Low Speed Rebound:</div>
         </div>
         <div class="col">
-            <input class="form-control" asp-for="LSR" type="text" placeholder="LSR" />
+            <input class="form-control" asp-for="LSR" type="text" placeholder="LSR" required/>
         </div>
     </div>
 
@@ -71,7 +71,7 @@
         <div class="col">
             <div class="col-form-label">Notes:</div>
         </div>
-        <textarea class="form-control" asp-for="Note" type="text" rows="8" placeholder="Add notes here..."></textarea>
+        <textarea class="form-control" asp-for="Note" type="text" rows="8" placeholder="Add notes here..." required></textarea>
     </div>
 
     <div class="row form-group mb-3">
